feat: upgrade to Java 25 & Spring Boot 4.1.0 and implement intelligence engine (BM25, KnowledgeGraph, ReactiveWatcher, SmartSynthesizer, Stats)