@@ -1,37 +1,46 @@
 package com.cortex.core;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import org.springframework.stereotype.Service;
-import lombok.extern.slf4j.Slf4j;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
-import java.util.Map;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Collections;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.*;
+import java.time.Instant;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
-
-
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 @Service
-@Slf4j
 public class ProjectRepository {
+
+    private static final Logger log = LoggerFactory.getLogger(ProjectRepository.class);
     private final ObjectMapper yamlMapper = new ObjectMapper(new YAMLFactory());
 
-    // Caching
-    private static class CacheEntry {
-        List<MemoryPage> pages;
-        long lastModified;
-        CacheEntry(List<MemoryPage> pages, long lastModified) {
-            this.pages = pages;
-            this.lastModified = lastModified;
-        }
+    @Autowired(required = false)
+    private ProjectWatcherService watcherService;
+
+    @Autowired(required = false)
+    private SmartSynthesizerService synthesizerService;
+
+    // Per-project in-memory indexes and knowledge graphs
+    private final Map<String, InMemoryLexicalIndex> indexes = new ConcurrentHashMap<>();
+    private final Map<String, KnowledgeGraph> graphs = new ConcurrentHashMap<>();
+
+    public ProjectRepository() {
     }
-    private final Map<String, CacheEntry> cache = new ConcurrentHashMap<>();
+
+    public ProjectRepository(ProjectWatcherService watcherService, SmartSynthesizerService synthesizerService) {
+        this.watcherService = watcherService;
+        this.synthesizerService = synthesizerService;
+    }
 
     private Path getProjectDir(String projectId) {
         if (projectId == null || projectId.trim().isEmpty()) {
@@ -40,12 +49,66 @@ public class ProjectRepository {
         return Paths.get(System.getProperty("user.home"), ".cortex", "projects", projectId);
     }
 
+    public InMemoryLexicalIndex getIndex(String projectId) {
+        return indexes.computeIfAbsent(projectId, pId -> {
+            InMemoryLexicalIndex index = new InMemoryLexicalIndex();
+            KnowledgeGraph graph = getGraph(pId);
+            loadAndIndexAll(pId, index, graph);
+            return index;
+        });
+    }
+
+    public KnowledgeGraph getGraph(String projectId) {
+        return graphs.computeIfAbsent(projectId, pId -> {
+            KnowledgeGraph graph = new KnowledgeGraph();
+            Path projectDir = getProjectDir(pId);
+            if (watcherService != null && Files.exists(projectDir)) {
+                InMemoryLexicalIndex index = indexes.get(pId);
+                if (index != null) {
+                    watcherService.registerProject(pId, projectDir, index, graph);
+                }
+            }
+            return graph;
+        });
+    }
+
+    private synchronized void loadAndIndexAll(String projectId, InMemoryLexicalIndex index, KnowledgeGraph graph) {
+        try {
+            Path projectDir = getProjectDir(projectId);
+            List<Path> dirs = List.of(projectDir.resolve("raw"), projectDir.resolve("pages"));
+            for (Path dir : dirs) {
+                if (Files.exists(dir)) {
+                    try (var stream = Files.walk(dir)) {
+                        stream.filter(p -> p.toString().endsWith(".md"))
+                              .filter(Files::isRegularFile)
+                              .forEach(p -> {
+                                  try {
+                                      MemoryPage page = MarkdownParser.parse(p);
+                                      if (page != null && page.getId() != null) {
+                                          index.indexPage(page);
+                                          graph.indexPage(page);
+                                      }
+                                  } catch (Exception e) {
+                                      log.debug("Erro ao fazer parse inicial de {}: {}", p, e.getMessage());
+                                  }
+                              });
+                    }
+                }
+            }
+            if (watcherService != null && Files.exists(projectDir)) {
+                watcherService.registerProject(projectId, projectDir, index, graph);
+            }
+        } catch (Exception e) {
+            log.error("Erro ao carregar e indexar projeto [{}]: {}", projectId, e.getMessage());
+        }
+    }
+
     public void init(String projectId) throws IOException {
         Path projectDir = getProjectDir(projectId);
         Files.createDirectories(projectDir.resolve("raw"));
         Files.createDirectories(projectDir.resolve("pages"));
         Files.createDirectories(projectDir.resolve("rules"));
-        
+
         Path schemaPath = projectDir.resolve("schema.md");
         if (!Files.exists(schemaPath)) {
             String defaultSchema = "---\n" +
@@ -61,12 +124,23 @@ public class ProjectRepository {
                     "- `note`: conhecimento geral sem um tipo específico\n";
             Files.writeString(schemaPath, defaultSchema);
         }
+
+        // Register watcher and init in-memory index
+        getIndex(projectId);
     }
 
     public void saveRaw(String projectId, String fileName, String content) throws IOException {
         Path projectDir = getProjectDir(projectId);
         Path rawPath = projectDir.resolve("raw").resolve(fileName);
         Files.writeString(rawPath, content);
+        try {
+            MemoryPage page = MarkdownParser.parse(rawPath);
+            if (page != null) {
+                getIndex(projectId).indexPage(page);
+                getGraph(projectId).indexPage(page);
+            }
+        } catch (Exception ignored) {
+        }
     }
 
     public String createRaw(String projectId, String typeStr, String content) throws IOException {
@@ -75,20 +149,20 @@ public class ProjectRepository {
         if (type == null) {
             throw new IllegalArgumentException("Tipo de memória inválido: " + typeStr);
         }
-        
-        String dateStr = java.time.LocalDateTime.now().format(java.time.format.DateTimeFormatter.ofPattern("yyyyMMdd-HHmmss"));
-        String id = "raw-" + dateStr + "-" + java.util.UUID.randomUUID().toString().substring(0, 4);
-        
+
+        String dateStr = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd-HHmmss"));
+        String id = "raw-" + dateStr + "-" + UUID.randomUUID().toString().substring(0, 4);
+
         Map<String, Object> frontmatter = new LinkedHashMap<>();
         frontmatter.put("id", id);
         frontmatter.put("type", type.getValue());
         frontmatter.put("project", projectId);
-        frontmatter.put("created_at", java.time.Instant.now().toString());
-        
+        frontmatter.put("created_at", Instant.now().toString());
+
         String yamlString = yamlMapper.writeValueAsString(frontmatter);
         if (!yamlString.startsWith("---")) yamlString = "---\n" + yamlString;
         yamlString = yamlString + "---\n\n" + content;
-                
+
         saveRaw(projectId, id + ".md", yamlString);
         appendLog(projectDir, "ingest | Raw memory criada: " + id);
         return id;
@@ -98,27 +172,27 @@ public class ProjectRepository {
         Path projectDir = getProjectDir(projectId);
         Path rawDir = projectDir.resolve("raw");
         if (!Files.exists(rawDir)) return 0;
-        try (java.util.stream.Stream<Path> stream = Files.walk(rawDir)) {
+        try (var stream = Files.walk(rawDir)) {
             return stream.filter(p -> p.toString().endsWith(".md"))
                          .filter(Files::isRegularFile)
                          .count();
         }
     }
 
-    public java.util.List<MemoryPage> getPendingRaws(String projectId) throws IOException {
+    public List<MemoryPage> getPendingRaws(String projectId) throws IOException {
         Path projectDir = getProjectDir(projectId);
         Path rawDir = projectDir.resolve("raw");
-        java.util.List<MemoryPage> rawPages = new java.util.ArrayList<>();
+        List<MemoryPage> rawPages = new ArrayList<>();
         if (!Files.exists(rawDir)) return rawPages;
-        
-        try (java.util.stream.Stream<Path> stream = Files.walk(rawDir)) {
+
+        try (var stream = Files.walk(rawDir)) {
             stream.filter(p -> p.toString().endsWith(".md"))
                   .filter(Files::isRegularFile)
                   .forEach(p -> {
                       try {
                           rawPages.add(MarkdownParser.parse(p));
                       } catch (Exception e) {
-                          log.error("Erro ao fazer parse do arquivo raw: " + p + " - " + e.getMessage());
+                          log.error("Erro ao fazer parse do arquivo raw: {} - {}", p, e.getMessage());
                       }
                   });
         }
@@ -127,9 +201,9 @@ public class ProjectRepository {
 
     public void updatePageStatus(String projectId, String pageId, String newStatus) throws IOException {
         Path projectDir = getProjectDir(projectId);
-        java.util.List<Path> dirsToSearch = java.util.Arrays.asList(
-            projectDir.resolve("pages"),
-            projectDir.resolve("raw")
+        List<Path> dirsToSearch = List.of(
+                projectDir.resolve("pages"),
+                projectDir.resolve("raw")
         );
         for (Path dir : dirsToSearch) {
             if (Files.exists(dir)) {
@@ -139,12 +213,12 @@ public class ProjectRepository {
                     try {
                         page = MarkdownParser.parse(file);
                     } catch (Exception e) {
-                        log.error("Erro ao carregar página para atualizar status: " + e.getMessage());
+                        log.error("Erro ao carregar página para atualizar status: {}", e.getMessage());
                         return;
                     }
-                    
+
                     page.setStatus(newStatus);
-                    
+
                     Map<String, Object> fm = new LinkedHashMap<>();
                     fm.put("id", page.getId());
                     if (page.getType() != null) fm.put("type", page.getType().getValue());
@@ -157,33 +231,39 @@ public class ProjectRepository {
                     String yamlString = yamlMapper.writeValueAsString(fm);
                     if (!yamlString.startsWith("---")) yamlString = "---\n" + yamlString;
                     yamlString = yamlString + "---\n\n" + (page.getContent() != null ? page.getContent() : "");
-                    
+
                     Files.writeString(file, yamlString);
+
+                    // Re-index
+                    getIndex(projectId).indexPage(page);
+                    getGraph(projectId).indexPage(page);
                     return;
                 }
             }
         }
-        log.error("Aviso: Página a ser substituída não encontrada (" + pageId + ")");
+        log.warn("Aviso: Página a ser substituída não encontrada ({})", pageId);
     }
 
-    public String writePage(String projectId, String typeStr, java.util.List<String> tags, String supersedes, java.util.List<String> consumedRawIds, String content) throws IOException {
+    public String writePage(String projectId, String typeStr, List<String> tags, String supersedes, List<String> consumedRawIds, String content) throws IOException {
         Path projectDir = getProjectDir(projectId);
         MemoryType type = MemoryType.fromValue(typeStr);
         if (type == null) {
             throw new IllegalArgumentException("Tipo de memória inválido: " + typeStr);
         }
 
+        Set<String> impactedPages = Collections.emptySet();
         if (supersedes != null && !supersedes.trim().isEmpty()) {
+            impactedPages = getGraph(projectId).getImpactedPagesOnSupersede(supersedes.trim());
             updatePageStatus(projectId, supersedes.trim(), "superseded");
         }
 
-        String dateStr = java.time.LocalDateTime.now().format(java.time.format.DateTimeFormatter.ofPattern("yyyyMMdd-HHmmss"));
-        String id = dateStr + "-" + java.util.UUID.randomUUID().toString().substring(0, 4);
+        String dateStr = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd-HHmmss"));
+        String id = dateStr + "-" + UUID.randomUUID().toString().substring(0, 4);
         if (tags != null && !tags.isEmpty()) {
             String mainTag = tags.get(0).toLowerCase().replaceAll("[^a-z0-9]", "-");
-            id = dateStr + "-" + mainTag + "-" + java.util.UUID.randomUUID().toString().substring(0, 4);
+            id = dateStr + "-" + mainTag + "-" + UUID.randomUUID().toString().substring(0, 4);
         }
-        
+
         Map<String, Object> fm = new LinkedHashMap<>();
         fm.put("id", id);
         fm.put("type", type.getValue());
@@ -191,150 +271,120 @@ public class ProjectRepository {
         fm.put("status", "active");
         if (supersedes != null && !supersedes.trim().isEmpty()) fm.put("supersedes", supersedes.trim());
         if (tags != null && !tags.isEmpty()) fm.put("tags", tags);
-        fm.put("created_at", java.time.Instant.now().toString());
+        fm.put("created_at", Instant.now().toString());
 
         String yamlString = yamlMapper.writeValueAsString(fm);
         if (!yamlString.startsWith("---")) yamlString = "---\n" + yamlString;
         yamlString = yamlString + "---\n\n" + content;
-        
+
         Path pagesPath = projectDir.resolve("pages").resolve(id + ".md");
         Files.writeString(pagesPath, yamlString);
-        
+
         if (consumedRawIds != null && !consumedRawIds.isEmpty()) {
             Path rawDir = projectDir.resolve("raw");
             for (String rawId : consumedRawIds) {
                 Path rawFile = rawDir.resolve(rawId + ".md");
                 if (Files.exists(rawFile)) {
                     Files.delete(rawFile);
+                    getIndex(projectId).removePage(rawId);
+                    getGraph(projectId).removePage(rawId);
                 }
             }
         }
-        
+
         updateIndex(projectDir, id, typeStr, tags);
         appendLog(projectDir, "write | Página consolidada: " + id + " (substitui: " + supersedes + ")");
-        
+
+        // Index new page
+        try {
+            MemoryPage newPage = MarkdownParser.parse(pagesPath);
+            getIndex(projectId).indexPage(newPage);
+            getGraph(projectId).indexPage(newPage);
+        } catch (Exception ignored) {
+        }
+
         syncToGit("Auto-consolidado pelo Cortex: " + id);
-        
-        return id;
+
+        StringBuilder res = new StringBuilder();
+        res.append("Página salva com sucesso. ID: ").append(id);
+        if (!impactedPages.isEmpty()) {
+            res.append("\n⚠️ **Alerta de Impacto**: As seguintes páginas continham referências à página substituída [")
+               .append(supersedes).append("] e podem precisar de revisão: `")
+               .append(String.join("`, `", impactedPages)).append("`");
+        }
+        return res.toString();
     }
 
     private void appendLog(Path projectDir, String message) throws IOException {
         Path logPath = projectDir.resolve("log.md");
-        String timestamp = java.time.Instant.now().toString();
+        String timestamp = Instant.now().toString();
         String logEntry = "## [" + timestamp + "] " + message + "\n";
-        Files.writeString(logPath, logEntry, java.nio.file.StandardOpenOption.CREATE, java.nio.file.StandardOpenOption.APPEND);
+        Files.writeString(logPath, logEntry, StandardOpenOption.CREATE, StandardOpenOption.APPEND);
     }
 
-    private void updateIndex(Path projectDir, String id, String typeStr, java.util.List<String> tags) throws IOException {
+    private void updateIndex(Path projectDir, String id, String typeStr, List<String> tags) throws IOException {
         Path indexPath = projectDir.resolve("index.md");
         String tagStr = tags != null ? String.join(", ", tags) : "sem tags";
         String entry = "- [" + id + "](" + "pages/" + id + ".md" + ") | Tipo: " + typeStr + " | Tags: " + tagStr + "\n";
-        
+
         if (!Files.exists(indexPath)) {
             String header = "# Índice do Projeto\n\nCatálogo de todas as páginas consolidadas.\n\n";
-            Files.writeString(indexPath, header, java.nio.file.StandardOpenOption.CREATE);
+            Files.writeString(indexPath, header, StandardOpenOption.CREATE);
         }
-        Files.writeString(indexPath, entry, java.nio.file.StandardOpenOption.APPEND);
+        Files.writeString(indexPath, entry, StandardOpenOption.APPEND);
     }
 
-    public java.util.List<MemoryPage> findAll(String projectId) throws IOException {
+    public List<MemoryPage> findAll(String projectId) throws IOException {
         Path projectDir = getProjectDir(projectId);
-        
-        java.util.List<Path> dirsToSearch = java.util.Arrays.asList(
-            projectDir.resolve("raw"),
-            projectDir.resolve("pages")
-        );
-        
-        long latestMod = 0;
-        for (Path dir : dirsToSearch) {
-            if (Files.exists(dir)) {
-                long mod = dir.toFile().lastModified();
-                if (mod > latestMod) latestMod = mod;
-            }
-        }
-        
-        CacheEntry entry = cache.get(projectId);
-        if (entry != null && entry.lastModified == latestMod) {
-            return entry.pages;
-        }
+        List<MemoryPage> pages = new ArrayList<>();
+        List<Path> dirsToSearch = List.of(projectDir.resolve("raw"), projectDir.resolve("pages"));
 
-        java.util.List<MemoryPage> pages = new java.util.ArrayList<>();
-        
         for (Path dir : dirsToSearch) {
             if (Files.exists(dir)) {
-                try (java.util.stream.Stream<Path> stream = Files.walk(dir)) {
+                try (var stream = Files.walk(dir)) {
                     stream.filter(p -> p.toString().endsWith(".md"))
                           .filter(Files::isRegularFile)
                           .forEach(p -> {
                               try {
                                   pages.add(MarkdownParser.parse(p));
                               } catch (Exception e) {
-                                  log.error("Erro ao fazer parse do arquivo: " + p + " - " + e.getMessage());
+                                  log.error("Erro ao fazer parse do arquivo: {} - {}", p, e.getMessage());
                               }
                           });
                 }
             }
         }
-        
-        cache.put(projectId, new CacheEntry(pages, latestMod));
         return pages;
     }
 
-    public java.util.List<MemoryPage> search(String projectId, String query) throws IOException {
-        Path projectDir = getProjectDir(projectId);
-        java.util.List<MemoryPage> results = new java.util.ArrayList<>();
-        String lowerQuery = query.toLowerCase();
-
-        java.util.List<Path> dirsToSearch = java.util.Arrays.asList(
-            projectDir.resolve("raw"),
-            projectDir.resolve("pages")
-        );
-        
-        for (Path dir : dirsToSearch) {
-            if (Files.exists(dir)) {
-                try (java.util.stream.Stream<Path> stream = Files.walk(dir)) {
-                    stream.filter(p -> p.toString().endsWith(".md"))
-                          .filter(Files::isRegularFile)
-                          .map(p -> {
-                              try {
-                                  return MarkdownParser.parse(p);
-                              } catch (Exception e) {
-                                  return null;
-                              }
-                          })
-                          .filter(java.util.Objects::nonNull)
-                          .filter(page -> {
-                              if (page.getTags() != null) {
-                                  for (String tag : page.getTags()) {
-                                      if (tag.toLowerCase().contains(lowerQuery)) return true;
-                                  }
-                              }
-                              if (page.getContent() != null && page.getContent().toLowerCase().contains(lowerQuery)) return true;
-                              if (page.getId() != null && page.getId().toLowerCase().contains(lowerQuery)) return true;
-                              if (page.getType() != null && page.getType().toString().toLowerCase().contains(lowerQuery)) return true;
-                              return false;
-                          })
-                          .forEach(results::add);
-                }
-            }
-        }
-        
-        return results;
+    /**
+     * Lexical search with BM25 ranking, snippet extraction and facet filtering.
+     */
+    public List<SearchResult> searchLexical(String projectId, String query, int limit) {
+        return getIndex(projectId).search(query, limit);
     }
 
-    public java.util.List<String> lint(String projectId) throws IOException {
-        java.util.List<String> warnings = new java.util.ArrayList<>();
-        java.util.List<MemoryPage> allPages = findAll(projectId);
-        
-        java.util.List<MemoryPage> pendingRaws = getPendingRaws(projectId);
-        java.util.Set<String> rawIds = new java.util.HashSet<>();
+    /**
+     * Legacy search returning MemoryPage list for backwards compatibility.
+     */
+    public List<MemoryPage> search(String projectId, String query) {
+        List<SearchResult> results = searchLexical(projectId, query, 20);
+        return results.stream().map(SearchResult::getPage).toList();
+    }
+
+    public List<String> lint(String projectId) throws IOException {
+        List<String> warnings = new ArrayList<>();
+        List<MemoryPage> allPages = findAll(projectId);
+
+        List<MemoryPage> pendingRaws = getPendingRaws(projectId);
+        Set<String> rawIds = new HashSet<>();
         for (MemoryPage p : pendingRaws) {
             if (p.getId() != null) rawIds.add(p.getId());
         }
-        
-        java.util.Set<String> validIds = new java.util.HashSet<>();
-        java.util.Map<String, java.util.List<String>> tagsToIds = new java.util.HashMap<>();
-        
+
+        Set<String> validIds = new HashSet<>();
+        Map<String, List<String>> tagsToIds = new HashMap<>();
+
         Path projectDir = getProjectDir(projectId);
         Path indexPath = projectDir.resolve("index.md");
         String indexContent = Files.exists(indexPath) ? Files.readString(indexPath) : "";
@@ -344,24 +394,24 @@ public class ProjectRepository {
                 validIds.add(page.getId());
                 if (!"superseded".equals(page.getStatus()) && !rawIds.contains(page.getId())) {
                     if (page.getTags() != null && !page.getTags().isEmpty()) {
-                        java.util.List<String> sortedTags = new java.util.ArrayList<>(page.getTags());
-                        java.util.Collections.sort(sortedTags);
+                        List<String> sortedTags = new ArrayList<>(page.getTags());
+                        Collections.sort(sortedTags);
                         String tagKey = String.join(",", sortedTags).toLowerCase();
-                        tagsToIds.computeIfAbsent(tagKey, k -> new java.util.ArrayList<>()).add(page.getId());
+                        tagsToIds.computeIfAbsent(tagKey, k -> new ArrayList<>()).add(page.getId());
                     }
                 }
             } else {
-                warnings.add("[ESTRUTURAL] Página encontrada sem ID no YAML (conteúdo: " + 
-                    (page.getContent() != null && page.getContent().length() > 20 
-                    ? page.getContent().substring(0, 20) + "..." : page.getContent()) + ")");
+                warnings.add("[ESTRUTURAL] Página encontrada sem ID no YAML (conteúdo: " +
+                        (page.getContent() != null && page.getContent().length() > 20
+                                ? page.getContent().substring(0, 20) + "..." : page.getContent()) + ")");
             }
         }
-        
-        java.util.regex.Pattern linkPattern = java.util.regex.Pattern.compile("\\[([a-zA-Z0-9_\\-]+)\\]");
+
+        Pattern wikilinkPattern = Pattern.compile("\\[\\[([a-zA-Z0-9_\\-]+)\\]\\]");
 
         for (MemoryPage page : allPages) {
             if (page.getId() == null) continue;
-            
+
             // Verifica supersedes
             String supersedes = page.getSupersedes();
             if (supersedes != null && !supersedes.trim().isEmpty()) {
@@ -371,50 +421,54 @@ public class ProjectRepository {
             }
 
             if ("superseded".equals(page.getStatus())) continue;
-            
+
             // Verifica Orphans (não está no index.md)
             if (!indexContent.contains(page.getId()) && !rawIds.contains(page.getId())) {
                 warnings.add("[ORPHAN] A página ativa " + page.getId() + " não consta no index.md");
             }
-            
-            // Verifica Dangling Links
+
+            // Verifica Wikilinks quebrados
             if (page.getContent() != null) {
-                java.util.regex.Matcher m = linkPattern.matcher(page.getContent());
+                Matcher m = wikilinkPattern.matcher(page.getContent());
                 while (m.find()) {
-                    String possibleId = m.group(1);
-                    // Ignora se for muito curto, foca no que se parece com ID do Cortex (tem hífen e > 8 chars)
-                    if (possibleId.length() > 8 && possibleId.contains("-") && !validIds.contains(possibleId)) {
-                        warnings.add("[DANGLING LINK] A página " + page.getId() + " cita um ID inexistente: " + possibleId);
+                    String targetId = m.group(1);
+                    if (!validIds.contains(targetId)) {
+                        warnings.add("[DANGLING WIKILINK] A página " + page.getId() + " cita o ID inexistente: [[" + targetId + "]]");
                     }
                 }
             }
         }
-        
+
         // Verifica Duplicates
-        for (java.util.Map.Entry<String, java.util.List<String>> entry : tagsToIds.entrySet()) {
+        for (Map.Entry<String, List<String>> entry : tagsToIds.entrySet()) {
             if (entry.getValue().size() > 1) {
                 warnings.add("[DUPLICATE CONTEXT] As páginas a seguir possuem as mesmas tags exatas (" + entry.getKey() + ") e podem precisar de consolidação: " + String.join(", ", entry.getValue()));
             }
         }
-        
+
+        // Alerta de Débito de Consolidação em raw/
+        if (pendingRaws.size() > 10) {
+            warnings.add(String.format("[DÉBITO DE CONSOLIDAÇÃO] Existem %d notas brutas em raw/ aguardando consolidação via `consolidate`", pendingRaws.size()));
+        }
+
         return warnings;
     }
 
     public void promoteRules(String projectId, String targetPath) throws IOException {
-        java.util.List<MemoryPage> allPages = findAll(projectId);
-        java.util.List<MemoryPage> activeRules = new java.util.ArrayList<>();
-        
+        List<MemoryPage> allPages = findAll(projectId);
+        List<MemoryPage> activeRules = new ArrayList<>();
+
         for (MemoryPage page : allPages) {
             if (page.getType() == MemoryType.RULE && "active".equalsIgnoreCase(page.getStatus())) {
                 activeRules.add(page);
             }
         }
-        
+
         if (activeRules.isEmpty()) {
             log.info("Nenhuma regra ativa para promover.");
             return;
         }
-        
+
         StringBuilder rulesBlock = new StringBuilder();
         rulesBlock.append("\n<!-- BEGIN CORTEX RULES -->\n");
         rulesBlock.append("# Regras Promovidas do Projeto Cortex\n\n");
@@ -423,7 +477,7 @@ public class ProjectRepository {
             rulesBlock.append(rule.getContent()).append("\n\n");
         }
         rulesBlock.append("<!-- END CORTEX RULES -->\n");
-        
+
         Path target = Paths.get(targetPath);
         if (Files.exists(target)) {
             String existingContent = Files.readString(target);
@@ -443,10 +497,8 @@ public class ProjectRepository {
 
     public String bootstrap(String projectId, String rootPath) throws IOException {
         Path projectDir = getProjectDir(projectId);
-        // 1. Criar estrutura de diretórios do projeto
         init(projectId);
 
-        // 2. Criar index.md se não existir
         Path indexPath = projectDir.resolve("index.md");
         if (!Files.exists(indexPath)) {
             String indexContent = "---\n" +
@@ -457,17 +509,15 @@ public class ProjectRepository {
             Files.writeString(indexPath, indexContent);
         }
 
-        // 3. Criar log.md se não existir
         Path logPath = projectDir.resolve("log.md");
         if (!Files.exists(logPath)) {
             String logContent = "# Log Cronológico\n\n" +
                     "| Data | Evento | ID |\n" +
                     "|---|---|---|\n" +
-                    "| " + java.time.Instant.now().toString() + " | Projeto inicializado via bootstrap | - |\n";
+                    "| " + Instant.now().toString() + " | Projeto inicializado via bootstrap | - |\n";
             Files.writeString(logPath, logContent);
         }
 
-        // 4. Registrar no config.yaml
         if (rootPath != null && !rootPath.trim().isEmpty()) {
             CortexConfigManager configManager = new CortexConfigManager();
             CortexConfig config = configManager.loadConfig();
@@ -475,7 +525,6 @@ public class ProjectRepository {
             configManager.saveConfig(config);
         }
 
-        // 5. Ejetar Skill de convenções no repositório de código
         if (rootPath != null && !rootPath.trim().isEmpty()) {
             Path skillDir = Paths.get(rootPath, ".agents", "skills", "cortex-conventions");
             Path skillFile = skillDir.resolve("SKILL.md");
@@ -494,7 +543,7 @@ public class ProjectRepository {
                         "### 2. Ao Concluir (Capture Context)\n" +
                         "No fim da sua tarefa, se você tropeçou em um bug não documentado (Gotcha), tomou uma decisão técnica arquitetural (Decision) ou descobriu um fato novo importante para agentes futuros (Fact), use a ferramenta `capture`.\n\n" +
                         "### 3. Consolidação Automática\n" +
-                        "A consolidação deve acontecer de forma automática **sempre ao término de uma sessão** e manual sempre que o usuário solicitar. Chame a ferramenta `consolidate` para ler as notas brutas e transformá-las em páginas curadas usando `write_page`.\n\n" +
+                        "A consolidação deve acontecer de forma automática **sempre ao término de uma sessão** e manual sempre que o usuário solicitar. Chame a ferramenta `consolidate` para ler as notas brutas agrupadas por tópicos e transformá-las em páginas curadas usando `write_page`.\n\n" +
                         "### 4. Promoção de Regras\n" +
                         "Se você criar uma regra ouro (`rule`) e consolidá-la usando `write_page`, lembre-se de promover a regra em seguida usando a tool `promote_rules`.\n\n" +
                         "**Atenção:** Siga a filosofia de que o Cortex é o cérebro persistente. Documente decisões no momento em que ocorrerem.\n";
@@ -505,40 +554,115 @@ public class ProjectRepository {
         return projectId;
     }
 
-    public String handoff(String projectId, String targetAgent) throws IOException {
-        java.util.List<MemoryPage> allPages = findAll(projectId);
+    public String consolidateReport(String projectId, String topic) throws IOException {
+        List<MemoryPage> pendingRaws = getPendingRaws(projectId);
+        if (topic != null && !topic.trim().isEmpty() && synthesizerService != null) {
+            pendingRaws = synthesizerService.filterByTopic(pendingRaws, topic);
+        }
 
-        // Filtrar apenas memórias ativas
-        java.util.List<MemoryPage> activePages = new java.util.ArrayList<>();
+        if (pendingRaws.isEmpty()) {
+            return "Nenhuma memória raw pendente para consolidar" + (topic != null ? " no tópico: " + topic : "") + ".";
+        }
+
+        if (synthesizerService != null) {
+            List<SmartSynthesizerService.MemoryCluster> clusters = synthesizerService.clusterPendingRaws(pendingRaws);
+            return synthesizerService.formatConsolidationReport(clusters, pendingRaws.size());
+        }
+
+        StringBuilder sb = new StringBuilder();
+        sb.append("Existem ").append(pendingRaws.size()).append(" memórias raw para consolidar:\n\n");
+        for (MemoryPage raw : pendingRaws) {
+            sb.append("- **[").append(raw.getId()).append("]** (Tipo: ").append(raw.getType()).append(")\n");
+            sb.append("  ").append(raw.getContent().replace("\n", " ")).append("\n\n");
+        }
+        return sb.toString();
+    }
+
+    public CortexStats getStats(String projectId) throws IOException {
+        List<MemoryPage> allPages = findAll(projectId);
+        long rawCount = getPendingRawCount(projectId);
+
+        int activeCount = 0;
+        int supersededCount = 0;
+        Map<String, Integer> byType = new LinkedHashMap<>();
+        Map<String, Integer> tagCounts = new HashMap<>();
+
+        for (MemoryPage p : allPages) {
+            if ("superseded".equalsIgnoreCase(p.getStatus())) {
+                supersededCount++;
+            } else {
+                activeCount++;
+                String typeStr = p.getType() != null ? p.getType().getValue() : "note";
+                byType.put(typeStr, byType.getOrDefault(typeStr, 0) + 1);
+
+                if (p.getTags() != null) {
+                    for (String t : p.getTags()) {
+                        tagCounts.put(t.toLowerCase(), tagCounts.getOrDefault(t.toLowerCase(), 0) + 1);
+                    }
+                }
+            }
+        }
+
+        KnowledgeGraph graph = getGraph(projectId);
+        int nodes = graph.getTotalNodes();
+        int edges = graph.getTotalEdges();
+        Map<String, Integer> topReferenced = graph.getTopReferenced(5);
+
+        Map<String, Integer> topTags = tagCounts.entrySet().stream()
+                .sorted(Map.Entry.<String, Integer>comparingByValue().reversed())
+                .limit(8)
+                .collect(java.util.stream.Collectors.toMap(
+                        Map.Entry::getKey,
+                        Map.Entry::getValue,
+                        (e1, e2) -> e1,
+                        LinkedHashMap::new
+                ));
+
+        return new CortexStats(
+                projectId,
+                allPages.size(),
+                activeCount,
+                supersededCount,
+                rawCount,
+                byType,
+                topTags,
+                nodes,
+                edges,
+                topReferenced
+        );
+    }
+
+    public String handoff(String projectId, String targetAgent) throws IOException {
+        List<MemoryPage> allPages = findAll(projectId);
+
+        List<MemoryPage> activePages = new ArrayList<>();
         for (MemoryPage page : allPages) {
             if (!"superseded".equalsIgnoreCase(page.getStatus())) {
                 activePages.add(page);
             }
         }
 
-        // Agrupar por tipo
-        java.util.Map<String, java.util.List<MemoryPage>> byType = new java.util.LinkedHashMap<>();
+        Map<String, List<MemoryPage>> byType = new LinkedHashMap<>();
         String[] typeOrder = {"rule", "decision", "fact", "gotcha", "note"};
         for (String t : typeOrder) {
-            byType.put(t, new java.util.ArrayList<>());
+            byType.put(t, new ArrayList<>());
         }
 
         for (MemoryPage page : activePages) {
             String typeKey = page.getType() != null ? page.getType().getValue() : "note";
-            byType.computeIfAbsent(typeKey, k -> new java.util.ArrayList<>()).add(page);
+            byType.computeIfAbsent(typeKey, k -> new ArrayList<>()).add(page);
         }
 
-        // Construir resumo
         StringBuilder sb = new StringBuilder();
-        sb.append("# Handoff Report — Projeto: ").append(projectId).append("\n\n");
-        sb.append("**Gerado em:** ").append(java.time.Instant.now().toString()).append("\n");
+        sb.append("# Handoff Report — Projeto: `").append(projectId).append("`\n\n");
+        sb.append("**Gerado em:** ").append(Instant.now().toString()).append("\n");
         if (targetAgent != null && !targetAgent.trim().isEmpty()) {
-            sb.append("**Agente alvo:** ").append(targetAgent).append("\n");
+            sb.append("**Agente alvo:** `").append(targetAgent).append("`\n");
         }
         sb.append("\n---\n\n");
 
-        for (java.util.Map.Entry<String, java.util.List<MemoryPage>> entry : byType.entrySet()) {
-            java.util.List<MemoryPage> pages = entry.getValue();
+        for (Map.Entry<String, List<MemoryPage>> entry : byType.entrySet()) {
+            List<MemoryPage> pages = entry.getValue();
             if (pages.isEmpty()) continue;
 
             String typeName = entry.getKey().substring(0, 1).toUpperCase() + entry.getKey().substring(1);
@@ -546,11 +670,11 @@ public class ProjectRepository {
 
             for (MemoryPage page : pages) {
                 String snippet = page.getContent() != null
-                        ? (page.getContent().length() > 120
-                            ? page.getContent().substring(0, 120).replace("\n", " ") + "..."
+                        ? (page.getContent().length() > 140
+                            ? page.getContent().substring(0, 140).replace("\n", " ") + "..."
                             : page.getContent().replace("\n", " "))
                         : "(sem conteúdo)";
-                sb.append("- **[").append(page.getId() != null ? page.getId().substring(0, 8) : "?").append("]** ");
+                sb.append("- **[").append(page.getId() != null ? page.getId() : "?").append("]** ");
                 if (page.getCreatedAt() != null) {
                     sb.append("(").append(page.getCreatedAt()).append(") ");
                 }
@@ -559,16 +683,10 @@ public class ProjectRepository {
             sb.append("\n");
         }
 
-        // Estatísticas
-        long rawCount = getPendingRawCount(projectId);
-        long ruleCount = byType.getOrDefault("rule", java.util.Collections.emptyList()).size();
+        CortexStats stats = getStats(projectId);
         sb.append("---\n\n");
-        sb.append("## Estatísticas\n\n");
-        sb.append("| Métrica | Valor |\n");
-        sb.append("|---|---|\n");
-        sb.append("| Memórias ativas | ").append(activePages.size()).append(" |\n");
-        sb.append("| Pendentes em raw/ | ").append(rawCount).append(" |\n");
-        sb.append("| Regras ativas | ").append(ruleCount).append(" |\n");
+        sb.append("## 📈 Saúde e Métricas\n\n");
+        sb.append(stats.toMarkdownSummary());
 
         return sb.toString();
     }
@@ -578,7 +696,6 @@ public class ProjectRepository {
         String authorEmail = System.getenv("GIT_AUTHOR_EMAIL");
         String remoteUrl = System.getenv("GIT_REMOTE_URL");
         if (authorName == null || authorEmail == null || remoteUrl == null) {
-            log.warn("Git credentials are not fully configured in environment. Skipping git sync.");
             return;
         }
 
@@ -598,7 +715,7 @@ public class ProjectRepository {
             runCommand(cortexDir, "git", "push", "-u", "origin", "main");
             log.info("Successfully synced to Git.");
         } catch (Exception e) {
-            log.error("Failed to sync to Git", e);
+            log.error("Failed to sync to Git: {}", e.getMessage());
         }
     }
 
@@ -609,7 +726,7 @@ public class ProjectRepository {
         int exitCode = p.waitFor();
         if (exitCode != 0) {
             String errorMsg = new String(p.getErrorStream().readAllBytes());
-            log.error("Git command failed with exit code " + exitCode + ": " + errorMsg);
+            log.error("Git command failed with exit code {}: {}", exitCode, errorMsg);
             throw new IOException("Git command failed: " + errorMsg);
         }
     }
